--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               <i class="circle-icon icon-star4"></i>
             </div>
             <div class="service-entry">
-              <h3>Great Concept</h3>
+              <h3>ABC Moving</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent feugiat tellus eget libero pretium, sollicitudin
@@ -197,7 +197,7 @@
               <i class="circle-icon icon-display"></i>
             </div>
             <div class="service-entry">
-              <h3>Development</h3>
+              <h3>Computer Repair</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent feugiat tellus eget libero pretium, sollicitudin
@@ -213,7 +213,7 @@
               <i class="circle-icon icon-user6"></i>
             </div>
             <div class="service-entry">
-              <h3>User Friendly</h3>
+              <h3>ABC Donuts</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent feugiat tellus eget libero pretium, sollicitudin
