--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h2>Cumulus Codex</h2>
             <p>We are an IT Consulting company focused on Cloud Migration.</p>
 
-            <a target="_blank" class="btn btn-ghost" href="#">Find Out More</a>
+            <!--<a target="_blank" class="btn btn-ghost" href="#">Find Out More</a>-->
           </div>
         </div>
       </div>
