--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <label for="nav-button" onclick></label>
               <ul class="nav-container">
                 <li><a href="#home" class="current">Home</a></li>
-                <li><a href="#services">Services</a></li>
+                <li><a href="#services">Clients</a></li>
                 <li><a href="#work">Work</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <!--<li><a href="#pricing">Pricing</a></li>-->
@@ -110,7 +110,9 @@
             <div class="service-entry">
               <h3>SnapFlix</h3>
               <p>
-                SnapFlix is an online language school migrated onto AWS Cloud.
+                SnapFlix is an online language school that we migrated onto the
+                AWS Cloud. Below are streaming video samples configured by our
+                team onto the AWS streaming servers worldwide.
               </p>
               <li>
                 Stephen Pak
@@ -128,7 +130,7 @@
                 <a
                   href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >Dog Alphabet</a
+                  >---</a
                 >
               </li>
 
@@ -138,7 +140,7 @@
                 <a
                   href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >Dog Alphabet</a
+                  >Bird Jive</a
                 >
               </li>
 
@@ -148,7 +150,7 @@
                 <a
                   href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >Dog Alphabet</a
+                  >---</a
                 >
               </li>
 
@@ -158,7 +160,7 @@
                 <a
                   href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >Dog Alphabet</a
+                  >---</a
                 >
               </li>
 
@@ -168,7 +170,7 @@
                 <a
                   href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >Dog Alphabet</a
+                  >DynamoDB</a
                 >
               </li>
               <!--<a class="btn read-more" href="#0">Read More</a>-->
