--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <!-- Services Section -->
     <div class="wrap services-wrap" id="services">
       <section class="grid grid-pad services">
-        <h2>Our Clients</h2>
+        <h2>Some of our clients</h2>
         <div class="col-1-4 service-box service-1">
           <div class="content">
             <div class="service-icon">
