--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-1-1">
           <div class="content content-header">
             <h2>Cumulus Codex</h2>
-            <p>We are an IT Consulting company focused on Cloud Migration.</p>
+            <p>We are an IT Consulting Company focused on Cloud Migration.</p>
 
             <!--<a target="_blank" class="btn btn-ghost" href="#">Find Out More</a>-->
           </div>
