--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 John D.
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
                   >Bird Jive</a
                 >
@@ -148,7 +148,7 @@
                 AJ
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
                   >---</a
                 >
