--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 Stephen Pak
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
                   >Dog Alphabet</a
                 >
