--- a/index.html
+++ b/index.html
@@ -122,10 +122,11 @@
                   target="_blank"
                   >Dog Alphabet</a
                 >
+                <!--href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4" link was above-->
               </li>
 
               <li>
-                Preethi Mounus
+                Preethi M.
 
                 <a
                   href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
