--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 Uka Dashdavaa
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
                   target="_blank"
                   >DynamoDB</a
                 >
