--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 Preethi M.
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
                   target="_blank"
-                  >---</a
+                  >DynamoDB-Lab</a
                 >
               </li>
 
@@ -151,7 +151,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >---</a
+                  >birds</a
                 >
               </li>
 
@@ -159,9 +159,9 @@
                 Joe Schulz
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
-                  >---</a
+                  >Shuiba</a
                 >
               </li>
 
