--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
                   target="_blank"
-                  >DynamoDB-Lab</a
+                  >DynamoDB Lab</a
                 >
               </li>
 
@@ -151,7 +151,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >birds</a
+                  >Birds</a
                 >
               </li>
 
@@ -161,7 +161,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
-                  >Shuiba</a
+                  >Shiba</a
                 >
               </li>
 
