--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
-                  >Dog Alphabet</a
+                  >Dog Video</a
                 >
                 <!--href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4" link was above-->
               </li>
@@ -131,7 +131,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
                   target="_blank"
-                  >DynamoDB Lab</a
+                  >DynamoDB Lab Video</a
                 >
               </li>
 
@@ -141,7 +141,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >Bird Jive</a
+                  >Bird Jive Video</a
                 >
               </li>
 
@@ -151,7 +151,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >Birds</a
+                  >Birds Video</a
                 >
               </li>
 
@@ -161,7 +161,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
-                  >Shiba</a
+                  >Shiba Video</a
                 >
               </li>
 
@@ -171,7 +171,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
                   target="_blank"
-                  >DynamoDB</a
+                  >DynamoDB Video</a
                 >
               </li>
               <!--<a class="btn read-more" href="#0">Read More</a>-->
