--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               </li>
 
               <li>
-                Uka Dashdavaa
+                Uka D.
 
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
