--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
                   target="_blank"
-                  >DynamoDB Lab Video</a
+                  >DynamoDB Video</a
                 >
               </li>
 
