--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
-                  >Dog Video</a
+                  >Dog Alphabet</a
                 >
                 <!--href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4" link was above-->
               </li>
@@ -129,9 +129,9 @@
                 Preethi M.
 
                 <a
-                  href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
+                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >DynamoDB Video</a
+                  >---</a
                 >
               </li>
 
@@ -141,7 +141,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >Bird Jive Video</a
+                  >Bird Jive</a
                 >
               </li>
 
@@ -151,7 +151,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >Birds Video</a
+                  >---</a
                 >
               </li>
 
@@ -159,19 +159,36 @@
                 Joe Schulz
 
                 <a
-                  href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
+                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
                   target="_blank"
-                  >Shiba Video</a
+                  >---</a
                 >
               </li>
 
               <li>
-                Uka D.
+                Uka Dashdavaa
 
                 <a
-                  href="https://stephenpak.github.io/cumuluscodex/dynamodb.mp4"
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
                   target="_blank"
-                  >DynamoDB Video</a
+                  >DynamoDB</a
+                >
+              </li>
+              <br />
+              <h5>Class Labs</h5>
+              <li>
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
+                  target="_blank"
+                  >DynamoDB 2-1-2024</a
+                >
+              </li>
+
+              <li>
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/S3WebLab.mp4"
+                  target="_blank"
+                  >Website from S3 2-7-2024</a
                 >
               </li>
               <!--<a class="btn read-more" href="#0">Read More</a>-->
