--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 Preethi M.
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
                   target="_blank"
-                  >---</a
+                  >DynamoDB Lab</a
                 >
               </li>
 
@@ -151,7 +151,7 @@
                 <a
                   href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
                   target="_blank"
-                  >---</a
+                  >Fly Away</a
                 >
               </li>
 
@@ -159,9 +159,9 @@
                 Joe Schulz
 
                 <a
-                  href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4"
+                  href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
                   target="_blank"
-                  >---</a
+                  >Shiba</a
                 >
               </li>
 
@@ -217,7 +217,7 @@
               <i class="circle-icon icon-display"></i>
             </div>
             <div class="service-entry">
-              <h3>Computer Guys</h3>
+              <h3>Geek Squad</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent feugiat tellus eget libero pretium, sollicitudin
@@ -233,7 +233,7 @@
               <i class="circle-icon icon-user6"></i>
             </div>
             <div class="service-entry">
-              <h3>Donuts R US</h3>
+              <h3>Donut Man</h3>
               <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                 Praesent feugiat tellus eget libero pretium, sollicitudin
