--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <ul class="nav-container">
                 <li><a href="#home" class="current">Home</a></li>
                 <li><a href="#services">Clients</a></li>
-                <li><a href="#work">Work</a></li>
+                <li><a href="#work">Class</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <!--<li><a href="#pricing">Pricing</a></li>-->
                 <li><a href="#team">Team</a></li>
@@ -98,7 +98,7 @@
       <path d="M0 100 C 20 0 50 0 100 100 Z"></path>
     </svg>
 
-    <!-- Services Section -->
+    <!-- Services/client Section -->
     <div class="wrap services-wrap" id="services">
       <section class="grid grid-pad services">
         <h2>Some of our clients</h2>
@@ -174,23 +174,7 @@
                   >DynamoDB</a
                 >
               </li>
-              <br />
-              <h5>Class Labs</h5>
-              <li>
-                <a
-                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
-                  target="_blank"
-                  >DynamoDB 2-1-2024</a
-                >
-              </li>
-
-              <li>
-                <a
-                  href="https://d2jgxew19kiqx4.cloudfront.net/S3WebLab.mp4"
-                  target="_blank"
-                  >Website from S3 2-7-2024</a
-                >
-              </li>
+              
               <!--<a class="btn read-more" href="#0">Read More</a>-->
             </div>
           </div>
@@ -245,6 +229,176 @@
         </div>
       </section>
     </div>
+
+    <!--class section-->
+    <div class="wrap services-wrap" id="work">
+      <section class="grid grid-pad services">
+        <h2>Class Lab Videos</h2>
+<!--        <div class="col-1-4 service-box service-1">
+          <div class="content">
+            <div class="service-icon">
+              <i class="circle-icon icon-heart4"></i>
+            </div>
+
+            <div class="service-entry">
+              <h3>SnapFlix</h3>
+              <p>
+                SnapFlix is an online language school that we migrated onto the
+                AWS Cloud. Below are streaming video samples configured by our
+                team onto the AWS streaming servers worldwide.
+              </p>
+              <li>
+                Stephen Pak
+
+                <a
+                  href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
+                  target="_blank"
+                  >Dog Alphabet</a
+                > 
+              -->
+
+                <!--href="https://d1sydwtyy5groz.cloudfront.net/dog.mp4" link was above-->
+ <!--             </li>
+
+              <li>
+                Preethi M.
+
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
+                  target="_blank"
+                  >DynamoDB Lab</a
+                >
+              </li>
+
+              <li>
+                John D.
+
+                <a
+                  href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
+                  target="_blank"
+                  >Bird Jive</a
+                >
+              </li>
+
+              <li>
+                AJ
+
+                <a
+                  href="https://stephenpak.github.io/cumuluscodex/birds.mp4"
+                  target="_blank"
+                  >Fly Away</a
+                >
+              </li>
+
+              <li>
+                Joe Schulz
+
+                <a
+                  href="https://stephenpak.github.io/cumuluscodex/dog.mp4"
+                  target="_blank"
+                  >Shiba</a
+                >
+              </li>
+
+              <li>
+                Uka Dashdavaa
+
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
+                  target="_blank"
+                  >DynamoDB</a
+                >
+              </li>
+              <br />
+              <h5>Class Labs</h5>
+              <li>
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
+                  target="_blank"
+                  >DynamoDB 2-1-2024</a
+                >
+              </li>
+
+              <li>
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/S3WebLab.mp4"
+                  target="_blank"
+                  >Website from S3 2-7-2024</a
+                >
+              </li>
+            -->
+              <!--<a class="btn read-more" href="#0">Read More</a>-->
+            <!--
+            </div>
+          </div>
+        </div>
+        <div class="col-1-4 service-box service-2">
+          <div class="content">
+            <div class="service-icon">
+              <i class="circle-icon icon-star4"></i>
+            </div>
+            <div class="service-entry">
+              <h3>ABC Moving</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent feugiat tellus eget libero pretium, sollicitudin
+                feugiat libero.
+              </p>
+              <a class="btn read-more" href="#0">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-4 service-box service-3">
+          <div class="content">
+            <div class="service-icon">
+              <i class="circle-icon icon-display"></i>
+            </div>
+            <div class="service-entry">
+              <h3>Geek Squad</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent feugiat tellus eget libero pretium, sollicitudin
+                feugiat libero.
+              </p>
+              <a class="btn read-more" href="#0">Read More</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-1-4 service-box service-4">
+          <div class="content">
+            <div class="service-icon">
+              <i class="circle-icon icon-user6"></i>
+            </div>
+            <div class="service-entry">
+              <h3>Donut Man</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                Praesent feugiat tellus eget libero pretium, sollicitudin
+                feugiat libero.
+              </p>
+              <a class="btn read-more" href="#0">Read More</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  -->
+
+              <li>
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/dynamodbFull.mp4"
+                  target="_blank"
+                  >DynamoDB 2-1-2024</a
+                >
+              </li>
+
+              <li>
+                <a
+                  href="https://d2jgxew19kiqx4.cloudfront.net/S3WebLab.mp4"
+                  target="_blank"
+                  >Website from S3 2-7-2024</a
+                >
+              </li>
 
     <!-- JS -->
     <script src="js/jquery.js"></script>
