--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
     <title>Cumulus Codex</title>
+    <link rel="icon" type="image/x-icon" href="favicon.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/reset.css" />
@@ -112,7 +113,7 @@
               <p>
                 SnapFlix is an online language school that we migrated onto the
                 AWS Cloud. Below are streaming video samples configured by our
-                team onto the AWS streaming servers worldwide.
+                team onto the AWS streaming servers worldwide.  They have been POC tested from North America to Europe.
               </p>
               <li>
                 Stephen Pak
