--- a/index.html
+++ b/index.html
@@ -401,6 +401,14 @@
                 >
               </li>
 
+              <li>
+                <a
+                  href="https://dokzwsfoesufh.cloudfront.net/Lab-EBS2-22-2024.mp4"
+                  target="_blank"
+                  >EBS LAB 2-21-2024</a
+                >
+              </li>
+
     <!-- JS -->
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
