--- a/index.html
+++ b/index.html
@@ -409,6 +409,14 @@
                 >
               </li>
 
+              <li>
+                <a
+                  href="https://d2r8deiwelgi1w.cloudfront.net/PortfolioPartA.mp4"
+                  target="_blank"
+                  >Portfolio Video Part A(https://aws.amazon.com/getting-started/hands-on/create-continuous-delivery-pipeline/?ref=gsrchandson)</a
+                >
+              </li>
+
     <!-- JS -->
     <script src="js/jquery.js"></script>
     <script src="js/main.js"></script>
