--- a/index.html
+++ b/index.html
@@ -409,13 +409,18 @@
                 >
               </li>
 
-              <li>
+              <h2>Cumulus Codex Portfolio</h2> 
+              <a href="https://aws.amazon.com/getting-started/hands-on/create-continuous-delivery-pipeline/?ref=gsrchandson" 
+              target="_blank">AWS "CI/CD Delivery Pipeline Page" click here, to see the video, click below</a>
+
+              <li>              
                 <a
                   href="https://d2r8deiwelgi1w.cloudfront.net/PortfolioPartA.mp4"
                   target="_blank"
-                  >Portfolio Video Part A(https://aws.amazon.com/getting-started/hands-on/create-continuous-delivery-pipeline/?ref=gsrchandson)</a
-                >
-              </li>
+                  >Portfolio Video Part A</a
+                ></li>  
+
+          
 
     <!-- JS -->
     <script src="js/jquery.js"></script>
