--- a/index.html
+++ b/index.html
@@ -420,6 +420,13 @@
                   >Portfolio Video Part A</a
                 ></li>  
 
+                <li>              
+                  <a
+                    href="https://d2r8deiwelgi1w.cloudfront.net/PortfolioPartB.mp4"
+                    target="_blank"
+                    >Portfolio Video Part B</a
+                  ></li>  
+
           
 
     <!-- JS -->
