--- a/index.html
+++ b/index.html
@@ -410,8 +410,10 @@
               </li>
 
               <h2>Cumulus Codex Portfolio</h2> 
+              <li>
               <a href="https://aws.amazon.com/getting-started/hands-on/create-continuous-delivery-pipeline/?ref=gsrchandson" 
-              target="_blank">AWS "CI/CD Delivery Pipeline Page" click here, to see the video, click below</a>
+              target="_blank">AWS "CI/CD Delivery Pipeline Page" (videos below)</a>
+              </li>
 
               <li>              
                 <a
